--- a/browser/index.html
+++ b/browser/index.html
@@ -10,5 +10,5 @@
 </style><link rel="stylesheet" href="styles-ZKZUJRE4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-ZKZUJRE4.css"></noscript><link rel="modulepreload" href="chunk-6JNF6Y5H.js"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-KLSFPLVX.js" type="module"></script></body>
+<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-AO73YRLS.js" type="module"></script></body>
 </html>
