--- a/server/index.server.html
+++ b/server/index.server.html
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="styles-ZKZUJRE4.css"><link rel="modulepreload" href="chunk-6JNF6Y5H.js"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-KLSFPLVX.js" type="module"></script></body>
+<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-AO73YRLS.js" type="module"></script></body>
 </html>
